Login error message handle
if login is incorrect wpf form will show a message. if its correct themessage wont show

--- a/RMDesktopUI/Views/LoginView.xaml
+++ b/RMDesktopUI/Views/LoginView.xaml
@@ -19,6 +19,7 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Center" 
@@ -26,20 +27,24 @@
             Login Form
         </TextBlock>
         
+        <!--Error message row-->
+        <TextBlock x:Name="ErrorMessage" Visibility="{Binding IsErrorVisible, Converter={StaticResource BooleanToVisibilityConverter}, FallbackValue=Collapsed}"  Grid.Row="1" 
+                   Margin="0 0 0 20" Foreground="Red" MaxWidth="300" Grid.Column="1" Grid.ColumnSpan="2" TextWrapping="Wrap" />
+
         <!--Username row-->
-        <TextBlock Grid.Row="1" Grid.Column="1" Margin="0 0 0 20" >
+        <TextBlock Grid.Row="2" Grid.Column="1" Margin="0 0 0 20" >
             Username : 
         </TextBlock>
-        <TextBox x:Name="UserName" Grid.Row="1" Grid.Column="2" MinWidth="150" Margin="0 0 0 20" />
+        <TextBox x:Name="UserName" Grid.Row="2" Grid.Column="2" MinWidth="350" Margin="5 0 0 20" />
         
         <!--password row-->
-        <TextBlock Grid.Row="2" Grid.Column="1" Margin="0 0 0 10" >
+        <TextBlock Grid.Row="3" Grid.Column="1" Margin="0 0 0 10" >
             Password :
         </TextBlock>
-        <PasswordBox x:Name="Password" Grid.Row="2" Grid.Column="2" MinWidth="150" Margin="0 0 0 20" />
+        <PasswordBox x:Name="Password" Grid.Row="3" Grid.Column="2" MinWidth="350" Margin="5 0 0 20" />
         
         <!--Login row-->
-        <Button Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Center"
+        <Button Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Center"
                 x:Name="LogIn" Padding="20 5">Log in</Button>
         
     </Grid>
