--- a/RMDesktopUI/App.xaml
+++ b/RMDesktopUI/App.xaml
@@ -9,6 +9,7 @@
                     <local:Bootstrapper x:Key="bootstrapper"  />
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
+            <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
